NXP-33606: cleanup / format